Replace Observer-Pattern with PropertyChangeListener